rhoai/manifests/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    istio.io/rev: openshift-gateway
    kuadrant.io/gateway: "true"
  name: openshift-ai-inference-rhcl
  namespace: openshift-ingress
spec:
  gatewayClassName: openshift-ai-inference
  listeners:
  - allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchExpressions:
          - key: kubernetes.io/metadata.name
            operator: In
            values:
            - openshift-ingress
            - redhat-ods-applications
            - my-first-model
    hostname: "*.rhoai.leonlevy.lol"
    name: https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: openshift-ai-inference-rhcl-tls
      mode: Terminate
